[package]
name = "simple_oqat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "simple_oqat"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
cute = "0.3.0"
ordered-float = "3.1.0"
rand = "0.8.3"